<resources>
    <string name="app_name">Kjørbar</string>

    <string name="navigation_main_to_profile">Profil</string>
    <string name="navigation_main_to_calculate">Kalkuler</string>
    <string name="navigation_calculation_to_add_unit">Legg til enhet</string>
    <string name="navigation_calculate_to_previous_calculations">Se tidligere kalkuleringer</string>
    <string name="navigation_calculate_to_new_calculation">Ny kalkulering</string>
    <string name="navigation_calculate_to_set_limits">Legg inn begrensninger</string>
    <string name="navigation_calculate_to_calculation">Start kalkulering</string>
    <string name="navigation_calculate_to_active_calculation">Aktiv kalkuleringer</string>

    <string name="profile_weight">Vekt:</string>
    <string name="profile_height">Height:</string>
    <string name="profile_age">Alder:</string>
    <string name="profile_gender">Kjønn:</string>
    <string name="profile_max_per_mill">Maks promille:</string>
    <string name="profile_max_units">Maks enheter:</string>

    <string name="calculation_drivable_in">Kjørbar om:</string>
    <string name="calculation_drivable_at">Kjørbar innen:</string>
    <string name="calculation_per_mill">Promille:</string>

    <string name="log_out">Logg ut</string>
    <string name="save">Lagre endringer</string>
    <string name="changes_have_been_saved">Endringene har blitt lagret</string>

    <string name="loged_in_as">Logget inn som: \u0020 </string>
    <string name="loged_out">Du har logget ut </string>
    <string name="unit_name">Unit name</string>
    <string name="percent">Percent</string>
    <string name="_5">5</string>
    <string name="percentSign">%</string>
    <string name="_1">1</string>
    <string name="_40">40</string>
    <string name="_0_5">0.5</string>
    <string name="dl">dl</string>
    <string name="delete">X</string>

</resources>
