<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnActiveCalculation"
        android:layout_width="198dp"
        android:layout_height="100dp"
        android:layout_marginTop="60dp"
        android:text="@string/navigation_calculate_to_active_calculation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNewCalculation" />

    <Button
        android:id="@+id/btnNewCalculation"
        android:layout_width="198dp"
        android:layout_height="100dp"
        android:layout_marginTop="60dp"
        android:text="@string/navigation_calculate_to_new_calculation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPreviousCalculations" />

    <Button
        android:id="@+id/btnPreviousCalculations"
        android:layout_width="198dp"
        android:layout_height="100dp"
        android:layout_marginTop="100dp"
        android:text="@string/navigation_calculate_to_previous_calculations"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
