<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.SetLimitActivity">

    <TextView
        android:id="@+id/profileMaxPerMill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/profile_max_per_mill" />

    <EditText
        android:id="@+id/inpProfileMaxPerMill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/profile_max_per_mill"
        android:inputType="number"
        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

    <TextView
        android:id="@+id/profileMaxPerUnit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/profile_max_units" />

    <EditText
        android:id="@+id/inpProfileMaxPerUnit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/profile_max_units"
        android:inputType="number"
        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

    <TextView
        android:id="@+id/calculationDrivableIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/calculation_drivable_at" />

    <DatePicker
            android:id="@+id/drivableInDatePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-30dp"
            android:layout_marginRight="-30dp"
            android:calendarViewShown="false"
            android:datePickerMode="spinner" />

    <TimePicker
        android:id="@+id/drivableInTimePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="-30dp"
        android:layout_marginRight="-30dp"
        android:timePickerMode="spinner" />

</LinearLayout>
